Current message text is now encoded in the URL hash fragment using base64. Field data now models deprecation, required field status and whether the field is a header field or not. Fixed layout bug when toggling 'show data type' option. Deprecated fields are now shown with strike-through.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,7 +110,17 @@ thead
 
 tr.system-field
 {
-    color: #888;
+    color: #aaa;
+}
+
+tr.deprecated-field td.field-name
+{
+    text-decoration: line-through;
+}
+
+tr.header-field
+{
+    color: #777;
 }
 
 td.field-id
